--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "soul-orm",
   "version": "1.0.0",
   "description": "soul-orm",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "lib/index.ts",
   "scripts": {
     "publish": "npm run build && npm publish",
     "build": "tsc -p tsconfig.json"
@@ -24,7 +25,9 @@
     "sqlstring": "^2.3.1"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.5",
     "@types/node": "^10.12.19",
+    "mysql": "^2.17.1",
     "prettier": "1.15.3",
     "ts-node": "^7.0.1",
     "tslint": "5.12.1",
