--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "soul-orm",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "soul-orm",
   "main": "dist/index.js",
   "types": "lib/index.ts",
@@ -22,12 +22,13 @@
   },
   "homepage": "https://github.com/my-soul/soul-orm#readme",
   "dependencies": {
+    "mysql": "^2.17.1",
     "sqlstring": "^2.3.1"
   },
   "devDependencies": {
     "@types/mysql": "^2.15.5",
+    "@types/sqlstring": "^2.2.1",
     "@types/node": "^10.12.19",
-    "mysql": "^2.17.1",
     "prettier": "1.15.3",
     "ts-node": "^7.0.1",
     "tslint": "5.12.1",
