--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "soul-orm",
-  "version": "1.1.20",
+  "version": "1.2.0",
   "description": "soul-orm",
   "main": "dist/index.js",
   "types": "lib/index.ts",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/my-soul/soul-orm.git"
+    "url": "git+https://github.com/test/soul-orm.git"
   },
   "keywords": [
     "soul-orm"
@@ -18,9 +18,9 @@
   "author": "renkun",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/my-soul/soul-orm/issues"
+    "url": "https://github.com/test/soul-orm/issues"
   },
-  "homepage": "https://github.com/my-soul/soul-orm#readme",
+  "homepage": "https://github.com/test/soul-orm#readme",
   "dependencies": {
     "mysql": "^2.17.1",
     "sqlstring": "^2.3.1"
